# Linear_FEM

./: CMakeLists.txt  README.md
include/: Element.h  FEMSolver.h  Node.h
src/: Element.cpp  FEMSolver.cpp  main.cpp  main_.cpp
